# ITMPC-Public

./: .gitignore  README.md  UPDATELOG.txt  next.config.js  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml  rust.yml
app/: page.js
pages/: compareExcel.js  convert.js  convertTwo.js  import_data.js  index.js  merge.js  rebuild.js  recompute.js  rename.js  repatch.js  repatch_v2.js  tools.js
pages/util/: Button.js  Excel.js  container.js  home.js
scripts/: update.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: data.rs  excel.rs  main.rs  ocr.rs  tests.rs
