[package]
name = "itmpc"
version = "1.0.6"
description = "A Tauri App"
authors = ["ModerRAS"]
license = ""
repository = ""
default-run = "itmpc"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["dialog-ask", "dialog-open", "fs-all", "protocol-all", "updater"] }
calamine = "0.19.1"
kamadak-exif = "0.5.5"
image = "0.24.6"
flyr = "0.5.0"
ndarray = "0.15.6"
rayon = "1.7.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
