[package]
name = "itmpc"
version = "1.6.3"
description = "A Tauri App"
authors = ["ModerRAS"]
license = "Mozilla Public License Version 2.0"
repository = ""
default-run = "itmpc"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.1", features = ["app-all", "dialog-ask", "dialog-message", "dialog-open", "dialog-save", "fs-all", "path-all", "protocol-all", "updater"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "^0.4"
calamine = "0.19.1"
kamadak-exif = "0.5.5"
image = "0.24.6"
ndarray = "0.15.6"
paddleocr = "0.2.3"
random-names = "0.1.3"
rand = "0.8.5"
random_name_generator = "0.3.4"
rust_xlsxwriter = "0.38.0"
chrono = "0.4.26"
directories = "5.0.1"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
tokio = { version = "1.28.2", features = ["full"] }
zip = "0.6.6"
futures-util = "0.3.28"
colorsys = "0.6.7"
colors-transform = "0.2.11"
lazy_static = "1.4.0"
regex = "1.8.4"
dotenvy = "0.15.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
